--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,15 @@
     <packaging>jar</packaging>
     <url>http://maven.apache.org</url>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <tomcat.version>8.5.23</tomcat.version>
     </properties>
 
 
     <build>
         <finalName>text-in-pict</finalName>
-        <pluginManagement>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -28,10 +30,18 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-            </plugins>
-            </pluginManagement>
-
-            <plugins>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib</classpathPrefix>
+                            <mainClass>launch.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>pl.project13.maven</groupId>
                 <artifactId>git-commit-id-plugin</artifactId>
